infrastructure/dex/config/httproute-tunnel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-tunnel
  namespace: dex
spec:
  parentRefs:
    - name: yh-cluster
      namespace: cloudflare-gateway
  hostnames:
    - dex-yh-k8s.tsuru.run
  rules:
    - backendRefs:
        - name: dex
          port: 5556
