infrastructure/dex/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-http
  namespace: dex
spec:
  parentRefs:
    - name: dex-gateway
  hostnames:
    - dex.yh.k8s.tsuru.run
  rules:
    - backendRefs:
        - name: dex
          port: 5556
